cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_195.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:142: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:142:13: Write of unused value
140.               tout0 = tin[0] ^ xor0;
141.               tout1 = tin[1] ^ xor1;
142.               l2nn(tout0, tout1, out, l + 8);
                   ^
143.               xor0 = tin0;
144.               xor1 = tin1;
